--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
 
 <section class="svelte-b1v1be"><h1 class="text-teal-700 svelte-b1v1be">Good Evening</h1>
 	<hr>
-	<h3 class="text-teal-800 font-semibold">It is currently 20:19 • 21/1/2023</h3>
+	<h3 class="text-teal-800 font-semibold">It is currently 20:21 • 21/1/2023</h3>
 </section></main>
 
 	<footer class="svelte-1djnwi8"><p>This app was made with SvelteKit</p></footer>
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="199tro7">
+		<script type="module" data-sveltekit-hydrate="es9oik">
 			import { start } from "./_app/immutable/start-93e37c66.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="199tro7"]').parentNode,
-				version: "1674332342805",
+				target: document.querySelector('[data-sveltekit-hydrate="es9oik"]').parentNode,
+				version: "1674332479629",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
